kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moby
  labels:
    app: challenge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: challenge
  template:
    metadata:
      labels:
        app: challenge
    spec:
      containers:
        - name: web
          image: docker/mobywebsite:latest
          ports:
          - containerPort: 9000
