kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: LoadBalancer
  selector:
    app: challenge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8087
