kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mateuscliraingress
  namespace: ingress-nginx
spec:
  rules:
  - host: schub.mateusclirachallenge.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx
            port:
              number: 443
  - host: schub.mateusclirachallenge.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx
            port:
              number: 80
  tls:
  - hosts:
      - schub.mateusclirachallenge.com
    secretName: mateuscliratls
